--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,25 @@
   font-weight: bold;
 }
 
-button:hover {
-  background-color: blueviolet;
+.App button {
+  border: 1px solid blue;
+  padding: 16px;
+  background-color: green;
+  font: inherit;
   color: white;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+.App button.red {
+  background-color: red;
+}
+
+.App button.red:hover {
+  background-color: salmon;
+  color: black;
 }
