--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -1,3 +1,4 @@
+
 .red {
     color: red;
   }
@@ -20,11 +21,11 @@
     color: black;
   }
   
-  .Cockpit button.red {
+  .Cockpit button.Red {
     background-color: red;
   }
   
-  .Cockpit button.red:hover {
+  .Cockpit button.Red:hover {
     background-color: salmon;
     color: black;
   }
